[gd_scene load_steps=23 format=3 uid="uid://6tx73f2fsqk8"]

[ext_resource type="Script" path="res://scripts/intro.gd" id="1_eb6ew"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_ndgtm"]
[ext_resource type="Script" path="res://scripts/Camera2D.gd" id="2_vx8gg"]
[ext_resource type="Texture2D" uid="uid://b6xbufjpghh6w" path="res://sprites/cleric.png" id="3_mmyfc"]
[ext_resource type="Texture2D" uid="uid://cgktvj01rvd0j" path="res://sprites/ward.png" id="4_7doa3"]
[ext_resource type="Texture2D" uid="uid://cphfeucx3ai4u" path="res://sprites/flame.png" id="5_ajmph"]
[ext_resource type="Texture2D" uid="uid://byh1o0djl175q" path="res://sprites/tile.png" id="6_iru57"]
[ext_resource type="Texture2D" uid="uid://kekf11r0nbms" path="res://sprites/void.png" id="7_qnyes"]
[ext_resource type="Texture2D" uid="uid://bgmh3lxhpgvlj" path="res://sprites/wall.png" id="8_84roq"]
[ext_resource type="AudioStream" uid="uid://yynmxesdh50v" path="res://sounds/dark-ritual.wav" id="9_kj7yy"]
[ext_resource type="Script" path="res://scripts/AudioStreamPlayer.gd" id="10_7r2r1"]
[ext_resource type="Texture2D" uid="uid://b2qk1vb0sui7j" path="res://sprites/wizard.png" id="11_i6lwy"]
[ext_resource type="AudioStream" uid="uid://bqomerfhpg55l" path="res://sounds/wizard-laugh.wav" id="12_swgkc"]
[ext_resource type="AudioStream" uid="uid://bvhgt5h1v3j2e" path="res://sounds/boom.wav" id="13_vgrlg"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_m1hp8"]
radius = 19.0
height = 110.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ib8rc"]
radius = 18.9737

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cncxb"]
radius = 7.0
height = 22.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_373d7"]
texture = ExtResource("6_iru57")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t5nss"]
texture = ExtResource("7_qnyes")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0
0:0/0/physics_layer_2/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_w32lx"]
texture = ExtResource("8_84roq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/physics_layer_1/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_1/angular_velocity = 0.0
0:0/0/physics_layer_2/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_2/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_6610i"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 2
physics_layer_1/collision_mask = 2
physics_layer_2/collision_layer = 4
physics_layer_2/collision_mask = 4
navigation_layer_0/layers = 1
navigation_layer_1/layers = 2
navigation_layer_2/layers = 4
sources/0 = SubResource("TileSetAtlasSource_373d7")
sources/1 = SubResource("TileSetAtlasSource_t5nss")
sources/2 = SubResource("TileSetAtlasSource_w32lx")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mmanf"]
radius = 23.0
height = 90.0

[node name="Intro" type="Node2D" groups=["unapusable"]]
position = Vector2(-1, 0)
script = ExtResource("1_eb6ew")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, 0)
script = ExtResource("2_vx8gg")

[node name="Player" type="Area2D" parent="." groups=["pausable"]]
light_mask = 2
visibility_layer = 2
z_index = 3
position = Vector2(-543, -60)
collision_layer = 7
collision_mask = 7
script = ExtResource("2_ndgtm")

[node name="PlayerSprite" type="Sprite2D" parent="Player"]
texture = ExtResource("3_mmyfc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CapsuleShape2D_m1hp8")

[node name="RayCast2D" type="RayCast2D" parent="Player"]

[node name="RitualCircle" type="Area2D" parent="."]
z_index = 2
position = Vector2(92, -35)
collision_layer = 14
collision_mask = 14

[node name="Sprite2D" type="Sprite2D" parent="RitualCircle"]
texture = ExtResource("4_7doa3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RitualCircle"]
shape = SubResource("CircleShape2D_ib8rc")

[node name="Flame" type="Area2D" parent="."]
visible = false
z_index = 2
position = Vector2(92, -49)
collision_layer = 14
collision_mask = 14

[node name="Sprite2D" type="Sprite2D" parent="Flame"]
texture = ExtResource("5_ajmph")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Flame"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_cncxb")

[node name="Map" type="TileMap" parent="."]
tile_set = SubResource("TileSet_6610i")
format = 2
layer_0/name = "Walls"
layer_0/navigation_enabled = false
layer_1/name = "Platforms"
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(65527, 0, 0, 65528, 0, 0, -8, 0, 0, -9, 0, 0, 131064, 0, 0, -65544, 0, 0, -65545, 0, 0, 131067, 0, 0, 131068, 0, 0, -65538, 0, 0, -65537, 0, 0, -1, 0, 0, -65536, 0, 0, 0, 0, 0, -65535, 0, 0, -131071, 0, 0, -131072, 0, 0, -131065, 0, 0, -65529, 0, 0, 7, 0, 0, 65543, 0, 0, 65544, 0, 0, 8, 0, 0, -65528, 0, 0, -131064, 0, 0, 4, 0, 0, -65543, 0, 0, -7, 0, 0, 65529, 0, 0, 131065, 0, 0, 131066, 0, 0, 65530, 0, 0, 65531, 0, 0, -65540, 0, 0, -4, 0, 0, 65532, 0, 0, 65533, 0, 0, -3, 0, 0, -65539, 0, 0, -2, 0, 0, 65534, 0, 0, -131066, 0, 0, -131067, 0, 0, -65531, 0, 0, -65530, 0, 0, 6, 0, 0, 5, 0, 0, 65541, 0, 0, 65542, 0, 0, 65540, 0, 0, 65535, 0, 0, 131071, 0, 0, 65536, 0, 0, -65542, 0, 0, -65541, 0, 0, -5, 0, 0, -6, 0, 0, 131063, 0, 0, 131069, 0, 0, 131070, 0, 0, 65537, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 65539, 0, 0, 65538, 0, 0, -65534, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -65532, 0, 0, -65533, 0, 0)
layer_2/name = "Void"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array(196599, 1, 0, 196600, 1, 0, 262136, 1, 0, 327672, 1, 0, 327671, 1, 0, 262135, 1, 0, 262137, 1, 0, 262138, 1, 0, 327674, 1, 0, 327673, 1, 0, 196601, 1, 0, -131079, 1, 0, -131080, 1, 0, -131081, 1, 0, -196617, 1, 0, -262153, 1, 0, -262152, 1, 0, -262151, 1, 0, -196615, 1, 0, -196616, 1, 0, -131078, 1, 0, -131077, 1, 0, -131076, 1, 0, -131075, 1, 0, -196611, 1, 0, -262147, 1, 0, 196602, 1, 0, 262139, 1, 0, 262140, 1, 0, 262141, 1, 0, 327676, 1, 0, 327675, 1, 0, 327677, 1, 0, 196606, 1, 0, 262142, 1, 0, 327678, 1, 0, 327679, 1, 0, 262143, 1, 0, 196607, 1, 0, 131072, 1, 0, 196608, 1, 0, 262144, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 262147, 1, 0, 196611, 1, 0, 131075, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 262151, 1, 0, 262150, 1, 0, 196614, 1, 0, 196615, 1, 0, -196602, 1, 0, -196601, 1, 0, -196600, 1, 0, -262136, 1, 0, -327672, 1, 0, -327673, 1, 0, -262137, 1, 0, -262138, 1, 0, -327674, 1, 0, -327677, 1, 0, -327678, 1, 0, -327679, 1, 0, -327680, 1, 0, -262145, 1, 0, -262146, 1, 0, -196610, 1, 0, -131074, 1, 0, -131073, 1, 0, -196608, 1, 0, -196607, 1, 0, -196606, 1, 0, -196605, 1, 0, -262141, 1, 0, -262142, 1, 0, -262143, 1, 0, -262144, 1, 0, -196609, 1, 0, -196604, 1, 0, -196603, 1, 0, -327690, 2, 0, -262154, 2, 0, -196618, 2, 0, -131082, 2, 0, -65546, 2, 0, -10, 2, 0, 65526, 2, 0, 131062, 2, 0, 196598, 2, 0, 262134, 2, 0, 327670, 2, 0, 393206, 2, 0, 327689, 2, 0, 393207, 2, 0, 393208, 2, 0, 393209, 2, 0, 393210, 2, 0, 393211, 2, 0, 393212, 2, 0, 393213, 2, 0, 393214, 2, 0, 393215, 2, 0, 327680, 2, 0, 327681, 2, 0, 327682, 2, 0, 327683, 2, 0, 327684, 2, 0, 327685, 2, 0, 327686, 2, 0, 327687, 2, 0, 327688, 2, 0, 262153, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 9, 2, 0, -65527, 2, 0, -131063, 2, 0, -196599, 2, 0, -262135, 2, 0, -327671, 2, 0, -393207, 2, 0, -393208, 2, 0, -393209, 2, 0, -393210, 2, 0, -393211, 2, 0, -393212, 2, 0, -393213, 2, 0, -393214, 2, 0, -393215, 2, 0, -393216, 2, 0, -327681, 2, 0, -327682, 2, 0, -327683, 2, 0, -327684, 2, 0, -327685, 2, 0, -327686, 2, 0, -327687, 2, 0, -327688, 2, 0, -327689, 2, 0, 196603, 1, 0, 196604, 1, 0, 196605, 1, 0, -262150, 1, 0, -262149, 1, 0, -262148, 1, 0, -196612, 1, 0, -196613, 1, 0, -196614, 1, 0, -327676, 1, 0, -262140, 1, 0, -262139, 1, 0, -327675, 1, 0, 196612, 1, 0, 196613, 1, 0, 262149, 1, 0, 262148, 1, 0)

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_kj7yy")
script = ExtResource("10_7r2r1")

[node name="Wizard" type="Area2D" parent="."]
z_index = 3
position = Vector2(477, 3)

[node name="WizardSprite" type="Sprite2D" parent="Wizard"]
texture = ExtResource("11_i6lwy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Wizard"]
position = Vector2(1, 8)
shape = SubResource("CapsuleShape2D_mmanf")

[node name="WizardLaugh" type="AudioStreamPlayer2D" parent="Wizard"]
stream = ExtResource("12_swgkc")

[node name="BoomEffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_vgrlg")

[node name="LaughSoundTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="BoomSoundTimer" type="Timer" parent="."]
wait_time = 1.25
one_shot = true
autostart = true

[node name="CollapseBridgeTimer" type="Timer" parent="."]
wait_time = 1.75
one_shot = true
autostart = true

[connection signal="area_entered" from="RitualCircle" to="Player" method="_on_ritual_circle_area_entered" binds= [Vector2(1, 0)]]
[connection signal="area_entered" from="Flame" to="Player" method="_on_flame_area_entered" binds= [Vector2(1, 0)]]
[connection signal="finished" from="BGMusic" to="." method="_on_audio_stream_player_finished"]
[connection signal="timeout" from="LaughSoundTimer" to="." method="_on_laugh_sound_timer_timeout"]
[connection signal="timeout" from="BoomSoundTimer" to="." method="_on_boom_sound_timer_timeout"]
[connection signal="timeout" from="CollapseBridgeTimer" to="." method="_on_collapse_bridge_timer_timeout"]
